--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@
 .strike {
   text-decoration: line-through;
 }
+
+.main-container {
+  max-width: 500px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 4rem;
+}
